# poem

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: main.cpp
src/module/: message.cpp  message.h
tests/module/: message_test.cpp
